--- a/src/sass-master/global.scss
+++ b/src/sass-master/global.scss
@@ -99,3 +99,58 @@ h1 {
     margin-top: 6px;
   }
 }
+
+.locCard {
+  display: flex;
+  flex-wrap: wrap;
+  width: 30%;
+  flex-direction: column;
+  margin: 20px 0;
+  align-items: center;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  padding: 10px 0;
+
+  h2 {
+    font-size: 2.2rem;
+  }
+
+  p {
+    font-size: 1.7rem;
+    margin-bottom: 10px;
+  }
+
+  button {
+    padding: 7px;
+    border-radius: 10px;
+  }
+}
+
+.epiCard {
+  display: flex;
+  flex-wrap: wrap;
+  width: 45%;
+  flex-direction: column;
+  margin: 20px 0;
+  align-items: center;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  padding: 10px 0;
+
+  h2 {
+    font-size: 2.2rem;
+  }
+
+  p {
+    font-size: 1.7rem;
+    margin-bottom: 10px;
+  }
+
+  button {
+    padding: 7px;
+    border-radius: 10px;
+  }
+
+  span {
+    font-size: 1.6rem;
+    font-style: italic;
+  }
+}
