--- a/src/sass-master/global.scss
+++ b/src/sass-master/global.scss
@@ -62,6 +62,7 @@ h1 {
     color: #fff;
     padding: 8px;
     border-radius: 12px;
+    font-size: 2rem;
     outline: none;
 
     &:hover {
@@ -137,6 +138,7 @@ h1 {
 
   h2 {
     font-size: 2.2rem;
+    margin-bottom: 10px;
   }
 
   p {
